Bug 157486 - Calc "Text Import" dialog is too tall in Japanese UI with GTK backend and 1024x768 resolution
Summary: Calc "Text Import" dialog is too tall in Japanese UI with GTK backend and 102...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2023-09-28 09:52 UTC by Stephan Bergmann
Modified: 2024-08-23 12:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Demonstrate the too-big dialog (124.13 KB, image/png)
2023-10-17 08:15 UTC, Stephan Bergmann
Details
screenshot of dialog in recent 24.2 build, just fits in 1024×768 with task bar (123.94 KB, image/png)
2023-10-17 08:43 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Bergmann 2023-09-28 09:52:45 UTC
Originally reported at <https://bugzilla.redhat.com/show_bug.cgi?id=2215194> "[ja_JP][oocalc] UI Distortion seen on Text import screen in LibreOffice Calc":  At least under GNOME/Wayland with the GTK VCL plugin, with the UI set to Japanese, and when using 1024x768 screen resolution, pasting multi-line text into Calc causes the "Text Import" dialog to appear, but which is too tall, so the bottom is cut of and unreachable.

(The original report referenced above was for LO 7.1.8, where the dialog was also too wide horizontally.  That horizontal issue happens to have meanwhile been fixed with <https://git.libreoffice.org/core/+/4c29c2bfab18b25229e0bc71014fd2ca42ec5bff%5E%21> "Resolves: tdf#114878 Add 'Evaluate formulas' option to CSV import and paste" in LO 7.3.0, but the vertical issue still remains with recent master builds towards LO 24.2.)

(With the UI set to English US, the dialog just barely fits vertically on the 1024x768 screen.  With SAL_USE_VCLPLUGIN=gen, the dialog fits nicely for both English US and Japanese UI.)
Comment 1 Stéphane Guillou (stragu) 2023-10-17 07:55:31 UTC
Testing with Ubuntu 20.04 + GNOME 3.36.8 + Wayland and :

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e9374f74385d7dfe77d1902d3d82af20143bc775
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: ja-JP
Calc: threaded

And a screen resolution of 1024×768, I don't get overflow (see screenshot).

The Red Hat ticket's attachment has some empty space below the preview: https://bugzilla-attachments.redhat.com/attachment.cgi?id=1970922

Do you know how to reproduce that? Does it happen with a specific file?
Comment 2 Stephan Bergmann 2023-10-17 08:15:27 UTC
Created attachment 190248 [details]
Demonstrate the too-big dialog
Comment 3 Stephan Bergmann 2023-10-17 08:23:49 UTC
(In reply to Stéphane Guillou (stragu) from comment #1)
> And a screen resolution of 1024×768, I don't get overflow (see screenshot).

Did you forget to attach your screenshot?

> The Red Hat ticket's attachment has some empty space below the preview:
> https://bugzilla-attachments.redhat.com/attachment.cgi?id=1970922
> 
> Do you know how to reproduce that? Does it happen with a specific file?

For what I can reproduce locally (currently on Fedora 39 beta), see attachment 190248 [details]:  With a recent master build (see below), and the plain text "foo\nbar" (with a newline between "foo" and "bar") in the clipboard, `LC_ALL=ja_JP.UTF-8 instdir/program/soffice --calc` and then Ctrl+V to make the dialog appear as shown in the attachment.


Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b45f021dc9cf2f86c3d3c5e127cb830a75ba7534
CPU threads: 12; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded
Comment 4 Stéphane Guillou (stragu) 2023-10-17 08:43:56 UTC
Created attachment 190250 [details]
screenshot of dialog in recent 24.2 build, just fits in 1024×768 with task bar

(In reply to Stephan Bergmann from comment #3)
> Did you forget to attach your screenshot?

Sure did!

In my case, it just fits in (including if the task bar is present in the display).
Looks like the issue on your end is the preview area being too big for no reason.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e9374f74385d7dfe77d1902d3d82af20143bc775
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: ja-JP
Calc: threaded
Comment 5 Caolán McNamara 2024-08-23 08:59:41 UTC
https://gerrit.libreoffice.org/c/core/+/172307 should make that better
Comment 6 Commit Notification 2024-08-23 11:01:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a8aa643a07c2280a22c12adee4e358e100028d20

Resolves: tdf#157486 measure with font used in the csv grid

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.