Resolves: tdf#157486 measure with font used in the csv grid

and not with the font of the parent widget

Change-Id: Idddf63022a5f838c73c04735829335a3056c82af
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172307
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>